Add RandomizedSearchCV for hyperparameter tuning and update accuracy output

--- a/notebooks/feature_exploration.ipynb
+++ b/notebooks/feature_exploration.ipynb
@@ -2009,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2ac26025",
    "metadata": {},
    "outputs": [
@@ -2017,7 +2017,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Accuracy: 0.8282593685267716, Standard Deviation: 0.024910423436788464\n"
+      "Mean Accuracy: 0.8349883874207519, Standard Deviation: 0.02825174215450522\n"
      ]
     }
    ],
@@ -2035,6 +2035,50 @@
     "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
     "scores = cross_val_score(rf, X, y, cv=cv, scoring='accuracy')\n",
     "print(f'Mean Accuracy: {scores.mean()}, Standard Deviation: {scores.std()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "70054f6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Score: 0.8327663046889711, Best Parameters: {'n_estimators': 200, 'min_samples_split': 10, 'min_samples_leaf': 1, 'max_features': None, 'max_depth': 20, 'class_weight': 'balanced', 'bootstrap': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "param_dist = {\n",
+    "    'n_estimators': [100, 200, 300, 400, 500],\n",
+    "    'max_depth': [None, 10, 20, 30, 40, 50],\n",
+    "    'min_samples_split': [2, 5, 10],\n",
+    "    'min_samples_leaf': [1, 2, 4],\n",
+    "    'max_features': ['sqrt', 'log2', None],\n",
+    "    'bootstrap': [True, False],\n",
+    "    'class_weight': [None, 'balanced', 'balanced_subsample']\n",
+    "}\n",
+    "\n",
+    "rf = RandomForestClassifier(random_state=42)\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "search = RandomizedSearchCV(\n",
+    "    rf,\n",
+    "    param_distributions=param_dist,\n",
+    "    n_iter=50,\n",
+    "    cv=cv,\n",
+    "    scoring='accuracy',\n",
+    "    n_jobs=-1,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "search.fit(X, y)\n",
+    "print(f'Best Score: {search.best_score_}, Best Parameters: {search.best_params_}')"
    ]
   },
   {
