--- a/competitions/titanic/notebooks/feature_exploration.ipynb
+++ b/competitions/titanic/notebooks/feature_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b70150e2",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "train_df = pd.read_csv('../data/raw/train.csv')\n",
+    "train_df = pd.read_csv('../../data/titanic/raw/train.csv')\n",
     "train_df.head()"
    ]
   },
