--- a/competitions/titanic/notebooks/getting_started.ipynb
+++ b/competitions/titanic/notebooks/getting_started.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a583a6e9",
    "metadata": {},
    "outputs": [
@@ -10,10 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/raw/test.csv\n",
-      "../data/raw/titanic.zip\n",
-      "../data/raw/train.csv\n",
-      "../data/raw/gender_submission.csv\n"
+      "../../data/titanic/raw/test.csv\n",
+      "../../data/titanic/raw/titanic.zip\n",
+      "../../data/titanic/raw/train.csv\n",
+      "../../data/titanic/raw/gender_submission.csv\n"
      ]
     }
    ],
@@ -22,14 +22,14 @@
     "import pandas as pd\n",
     "\n",
     "import os\n",
-    "for dirname, _, filenames in os.walk('../data/raw/'):\n",
+    "for dirname, _, filenames in os.walk('../../data/titanic/raw/'):\n",
     "    for filename in filenames:\n",
     "        print(os.path.join(dirname, filename))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ebeab4d6",
    "metadata": {},
    "outputs": [
@@ -177,13 +177,13 @@
     }
    ],
    "source": [
-    "train_df = pd.read_csv('../data/raw/train.csv')\n",
+    "train_df = pd.read_csv('../../data/titanic/raw/train.csv')\n",
     "train_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6c8b1ad9",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
     }
    ],
    "source": [
-    "test_df = pd.read_csv('../data/raw/test.csv')\n",
+    "test_df = pd.read_csv('../../data/titanic/raw/test.csv')\n",
     "test_df.head()"
    ]
   },
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e269d5c5",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
     "predictions = model.predict(X_test)\n",
     "\n",
     "output = pd.DataFrame({'PassengerId': test_df.PassengerId, 'Survived': predictions})\n",
-    "output.to_csv('../data/processed/submission.csv', index=False)\n",
+    "output.to_csv('../../data/titanic/processed/submission.csv', index=False)\n",
     "print(\"Your submission was successfully saved!\")"
    ]
   },
